gowebapp/deployweb.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: gowebapp-mysql
  labels:
    app: gowebapp-mysql
    tier: backend
spec:
  replicas: 1
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: gowebapp-mysql
      tier: backend
  template:
    metadata:
      labels:
        app: gowebapp-mysql
        tier: backend
    spec:
      containers:
      - name: gowebapp-mysql
        image: localhost:5000/gowebapp-mysql:v1 
        ports:
        - containerPort: 3306
