gowebapp/deployweb2.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: gowebapp
  labels:
    app: gowebapp
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gowebapp
      tier: frontend
  template:
    metadata:
      labels:
        app: gowebapp
        tier: frontend
    spec:
      containers:
      - name: gowebapp
        image: localhost:5000/gowebapp:v2     
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /opt/gowebapp/config
      volumes:
      - name: config-volume
        configMap:
          name: gowebapp
          items:
          - key: webapp-config-json
            path: config.json
