gowebapp/elastic.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-k8s-logging
  namespace: kube-instrumentation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
      function: logging
  template:
    metadata:
      labels:
        app: elasticsearch
        function: logging
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:5.5.1
        command: ["bin/elasticsearch"]
        args: ["-Ehttp.host=0.0.0.0", "-Etransport.host=127.0.0.1", "-Ecluster.name=kubernetes", "-Ebootstrap.memory_lock=true"]
        ports:
        - containerPort: 9200
      - name: volume-mount-hack
        image: busybox
        command: ["sh", "-c", "chown -R 1000:100 /usr/share/elasticsearch/data"]
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
          spec:
            containers:
            - name: elasticsearch
              image: docker.elastic.co/elasticsearch/elasticsearch:5.5.1
              resources:
                requests:
                  memory: "600Mi"
