gowebapp/influxdb.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-influxdb
  namespace: kube-instrumentation
  labels:
    app: influxdb
    function: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
      function: monitoring
  template:
    metadata:
     labels:
       app: influxdb
       function: monitoring
    spec:
      containers:
      - name: influxdb
        image: gcr.io/google_containers/heapster-influxdb-amd64:v1.1.1
        volumeMounts:
        - mountPath: /data
          name: influxdb-storage
      volumes:
      - name: influxdb-storage
        emptyDir: {}
