gowebapp/goweb.yml
apiVersion: v1
kind: Service
metadata: 
  name: gowebapp-mysql
  labels:
    app: gowebapp-mysql
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: gowebapp-mysql
    tier: backend
