gowebapp/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: gowebapp
  labels:
    app: gowebapp
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: gowebapp
    tier: frontend
