gowebapp/filebeat.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: kube-instrumentation
  labels:
    name: kube-instrumentation
---
kind: Service
apiVersion: v1
metadata:
  name: es-k8s-logging
  namespace: kube-instrumentation
  labels:
    app: elasticsearch
    function: logging
spec:
  selector:
    app: elasticsearch
    function: logging
  type: NodePort
  ports:
    - protocol: TCP
      port: 9200
      nodePort: 30920
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-k8s-logging
  namespace: kube-instrumentation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
      function: logging
  template:
    metadata:
      labels:
        app: elasticsearch
        function: logging
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:5.5.1
        command: ["bin/elasticsearch"]
        args: ["-Ehttp.host=0.0.0.0", "-Etransport.host=127.0.0.1", "-Ecluster.name=kubernetes", "-Ebootstrap.memory_lock=true"]
        ports:
        - containerPort: 9200
---
kind: Service
apiVersion: v1
metadata:
  name: kibana-k8s-logging
  namespace: kube-instrumentation
  labels:
    app: kibana
    function: logging
spec:
  selector:
    app: kibana
    function: logging
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5601
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: instrumentation-ingress
  namespace: kube-instrumentation
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /kibana/?(.*)
        backend:
          serviceName: kibana-k8s-logging
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-k8s-logging
  namespace: kube-instrumentation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
      function: logging
  template:
    metadata:
      labels:
        app: kibana
        function: logging
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:5.5.1
        ports:
        - containerPort: 5601
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: filebeat-k8s-logging
  namespace: kube-instrumentation
  labels:
    app: filebeat
    function: logging
spec:
  template:
    metadata:
      labels:
        app: filebeat
        function: logging
      name: filebeat
    spec:
      serviceAccountName: filebeat
      containers:
      - name: filebeat
        image: docker.elastic.co/beats/filebeat:6.0.0-alpha2
        command: ["filebeat"]
        args: ["-e", "-c", "/etc/filebeat/filebeat.yaml"]
        resources:
          limits:
            cpu: 50m
            memory: 50Mi
        securityContext:
          privileged: true
          runAsUser: 0
        volumeMounts:
        - name: varlog
          mountPath: /var/log/containers
          readOnly: true
        - name: varlogpods
          mountPath: /var/log/pods
          readOnly: true
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
        - name: config-volume
          mountPath: /etc/filebeat
      terminationGracePeriodSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log/containers
      - name: varlogpods
        hostPath:
          path: /var/log/pods
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers/
      - name: config-volume
        configMap:
          name: filebeat-config
