gowebapp/deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 00-default-deny
  namespace: default
spec:
  podSelector: {}
