gowebapp/whitelist.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: 10-nginx-allow-from-lab
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - from:
    - podSelector:
        matchLabels:
          lab: network
